[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acryo"
dynamic = ["version"]
description = "An extensible cryo-EM/ET toolkit for Python."
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Hanjin Liu", email = "liuhanjin-sc@g.ecc.u-tokyo.ac.jp" },
]
dependencies = [
    "dask>=2021.6.0",
    "numpy>=1.21",
    "polars>=0.19.19",
    "scipy>=1.11.1",
    "typing_extensions>=4.1.1",
]

[tool.hatch.version]
path = "acryo/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/acryo",
]

[project.optional-dependencies]
testing = [
    "pytest",
]
